<resources>
    <string name="app_name">Hucha</string>
    <string name="title_home">Metas</string>
    <string name="title_hucha_general">Hucha general</string>
    <string name="title_ajustes">Ajustes</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="IniciarSesionGoogle">Iniciar sesión con google</string>
    <string name="nocuenta">¿No tienes cuenta? Creala ahora</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_crear_meta">Crear meta</string>
    <string name="title_edit_meta">Editar meta</string>
    <string name="title_detalles_meta">Detalles meta</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="acuerdo_terminos">Estoy de acuerdo con los términos\n y condiciones de uso</string>
    <string name="cantidad">Cantidad</string>
    <string name="cantidad_inicial">Cantidad inicial</string>
    <string name="registrarme">Registrarme</string>
    <string name="configurarPrivacidad">Configurar privacidad</string>
    <string name="reiniciar_datos">Reiniciar datos</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="exportar_datos">Exportar datos</string>
    <string name="sobre_nosotros">Sobre nosotros</string>
    <string name="progreso">Progreso</string>
    <string name="ingresar">Ingresar</string>
    <string name="retirar">Retirar</string>
    <string name="introducir_cantidad">Introduce la cantidad</string>
    <string name="anadir_transaccion">Añadir transaccion</string>
    <string name="introducir_abono">Introduzca la cantidad que desee abonar</string>
    <string name="introducir_retirada">Introduzca la cantidad que desee retirar</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cantidad_no_introducida">No se ha introducido ninguna cantidad</string>
    <string name="eliminar">Eliminar</string>
    <string name="title_eliminar_meta">Eliminar meta</string>
    <string name="aviso_eliminar">Va a eliminar una meta, ¿está seguro?</string>
    <string name="rellenar_campo_nombre">Debe rellenar el campo nombre</string>
    <string name="faltan_campos_rellenar">Faltan campos por rellenar</string>
    <string name="rellenar_campo_cantidad_inicial">Debe rellenar el precio de la meta</string>
    <string name="rellenar_campo_cantidad_objetivo">Debe rellenar el campo cantidad objetivo</string>
    <string name="default_web_client">646291813216-88mlptltu6086risai1h5j8mf98khlro.apps.googleusercontent.com</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="cierre_sesion_correcto">Se ha cerrado sesión correctamente</string>
    <string name="anadir_meta">Añadir meta</string>
    <string name="no_metas">No hay metas disponibles.\nPulse el botón para añadir una nueva meta</string>
    <string name="sin_concepto">Sin concepto</string>
    <string name="introducir_concepto">Introduzca el concepto</string>
    <string name="precio_meta">Precio meta</string>
    <string name="no_transacciones">No se ha añadido ninguna transacción.</string>
    <string name="cantidad_actual">Cantidad actual</string>
    <string name="aviso_cerrar_sesion">¿Está seguro de que desea cerrar sesión?</string>
    <string name="aviso_reiniciar_datos">¿Está seguro de que desea reiniciar sus datos? Se perderá todo el progreso y metas creadas hasta ahora</string>
    <string name="aviso_eliminar_cuenta">¿Está seguro de que desea eliminar su cuenta? Se perderán todos los datos de la misma</string>
    <string name="metas_alcanzadas">Metas alcanzadas:</string>
    <string name="metas_pendientes">Metas pendientes:</string>
    <string name="ahorro_mensual">Este mes has ahorrado:</string>
    <string name="progreso_total">Progreso total:</string>
    <string name="ahorro_general"><![CDATA[Llevas <b>%d€</b> ahorrados para tus metas.]]></string>
    <string name="total_hucha_general"><![CDATA[El total de dinero de tus metas es <b>%d€</b>]]></string>
    <string name="email_erroneo">El email introducido no tiene el formato correcto.</string>
    <string name="password_mas_8_caracteres">La contraseña debe contener más de 8 caracteres.</string>
    <string name="password_contener_numero">La contraseña debe contener un número.</string>
    <string name="password_minuscula_mayuscula">La contraseña debe contener al menos una mayúscula y una minúscula.</string>
    <string name="password_caracter_especial">La contraseña debe contener un caracter especial.</string>
    <string name="error_crear_cuenta">Error al crear cuenta.</string>
    <string name="eliminar_datos_correcto">Los datos se han eliminado correctamente.</string>
    <string name="eliminar_datos_error">Ha habido un error al eliminar los datos. Inténtelo más tarde.</string>
    <string name="atencion">Atención</string>
    <string name="cantidad_superior_0">La cantidad de la meta debe ser superior a 0.</string>
    <string name="aviso_cantidad_actual_superior">La cantidad introducida sobrepasa el valor total de la meta. Introduzca una transacción válida.</string>
    <string name="aviso_cantidad_actual_menor_0">Con la cantidad introducida, el ahorro de la meta quedaría por debajo de 0. Introduzca una cantidad válida.</string>
    <string name="color">Color:</string>
    <string name="icono">Icono:</string>
    <string name="seleccionar_imagen">Seleccionar imagen</string>
    <string name="info">Info</string>
    <string name="trabajando_en_ello">Estamos trabajando en ello...</string>
</resources>