<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".ui.CrearMetaFragment">

    <ImageView
        android:id="@+id/ivCrearMeta"
        android:layout_width="168dp"
        android:layout_height="131dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvCrearMeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_crear_meta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCrearMeta"
        android:layout_marginTop="50dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etNombreMeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCrearMeta"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/etCantidadCrearMeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/precio_meta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombreMeta"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etCantidadInicialMeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cantidad_actual"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCantidadCrearMeta"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tvColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:text="@string/color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCantidadInicialMeta" />

    <Button
        android:id="@+id/btnColor"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvColor"
        app:layout_constraintBottom_toBottomOf="@+id/tvColor"/>

    <Button
        android:id="@+id/btnCrearMeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/title_crear_meta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIconoMeta" />

    <ImageView
        android:id="@+id/ivAtrasCrearMeta"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_atras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/tvIconoMeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icono"
        android:layout_marginTop="35dp"
        android:textSize="18sp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvColor"/>

    <ImageView
        android:id="@+id/ivIconoMeta"
        android:layout_width="71dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_no_image"
        app:layout_constraintBottom_toBottomOf="@+id/tvIconoMeta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvIconoMeta" />


</androidx.constraintlayout.widget.ConstraintLayout>